--- a/src/app/styles/variables/_fonts.scss
+++ b/src/app/styles/variables/_fonts.scss
@@ -12,3 +12,11 @@
     font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'OpenSans';
+    src: url(../fonts/OpenSans.ttf) format('ttf');
+    font-weight: 400;
+    line-height: 1.35;
+    font-size: 14px;
+}
