feat: login page (without a list of users and adaptation)

--- a/src/app/styles/themes/_dark.scss
+++ b/src/app/styles/themes/_dark.scss
@@ -1,8 +1,10 @@
 .app--dark-theme {
     --bg-color: var(--color-dark-alt);
-    --side-menu-bg-color: var(--color-dark);
-    --visit-count-bg-color: var(--color-gray);
-    --select-menu-color: var(--color-purple-dark);
-    --theme-button-color: var(--color-gray);
     --color-theme: var(--color-light);
+
+    --theme-button-color: var(--color-gray);
+    --button-color: var(--color-purple-light);
+
+    --Input-border-color: var(--color-purple-light);
+
 }
