--- a/src/app/styles/themes/_normal.scss
+++ b/src/app/styles/themes/_normal.scss
@@ -1,8 +1,10 @@
 .app--light-theme {
     --bg-color: var(--color-light);
-    --side-menu-bg-color: var(--color-purple-light);
-    --visit-count-bg-color: var(--color-gold-dark);
-    --select-menu-color: var(--color-gold-light);
-    --theme-button-color: var(--color-dark);
     --color-theme: var(--color-dark);
+
+    --theme-button-color: var(--color-dark);
+    --button-color: var(--color-gold-light);
+
+    --Input-border-color: var(--color-dark);
+
 }
