--- a/src/app/styles/variables/_fonts.scss
+++ b/src/app/styles/variables/_fonts.scss
@@ -7,6 +7,14 @@
 }
 @font-face {
     font-family: 'Heebo';
+    src: url(../fonts/Heebo-Medium.woff2) format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heebo';
     src: url(../fonts/Heebo-Bold.woff2) format('woff2');
     font-weight: 700;
     font-style: normal;
