--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -11,6 +11,7 @@
     background-color: var(--bg-color);
     border-radius: var(--border-radius);
     color: var(--color-theme);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .open {
