--- a/src/app/styles/variables/_variables.scss
+++ b/src/app/styles/variables/_variables.scss
@@ -12,6 +12,8 @@
     --color-gold-light: #FFDD75;
     --color-gold-dark: #FABB00;
     --color-green: #83C93C;
+    --color-anti-flash-white: #f2f2f2;
+    --color-purple-navy: #4f5c87;
 
     --border-radius: 5px;
 
