--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -11,6 +11,16 @@
     @include square(32px);
 }
 
+.clearFilterButton {
+    height: 34px;
+    width: 150px;
+    background-color: var(--color-anti-flash-white);
+    border-radius: var(--border-radius);
+    font-size: var(--font-size-xs);
+    color: var(--color-purple-navy);
+    // background-image: url('../../assets/icons/inputs/user.svg') repeat-x left top;
+}
+
 .loginButton {
     width: 200px;
     height: 40px;
