Working on Table

--- a/src/app/styles/variables/_fonts.scss
+++ b/src/app/styles/variables/_fonts.scss
@@ -28,3 +28,11 @@
     line-height: 1.35;
     font-size: 14px;
 }
+
+@font-face {
+    font-family: 'OpenSansItalic';
+    src: url(../fonts/OpenSansItalic.ttf) format('ttf');
+    font-weight: 400;
+    line-height: 1.35;
+    font-size: 14px;
+}
