--- a/src/pages/PetPage/ui/PetsPage.module.scss
+++ b/src/pages/PetPage/ui/PetsPage.module.scss
@@ -1,17 +1,17 @@
-.petsTable {
-    border: 1px solid #4f5c78;
-    border-collapse: collapse;
-    font-family: 'OpenSans';
-}
+// .petsTable {
+//     border: 1px solid #4f5c78;
+//     border-collapse: collapse;
+//     font-family: 'OpenSans';
+// }
 
-.headT td {
-    border: 1px solid #4f5c78;
-    font-weight: 600;
-    width: 950px;
-    padding-right: 17px;
-    text-align: left;
-    padding: 5px;
-}
+// .headT td {
+//     border: 1px solid #4f5c78;
+//     font-weight: 600;
+//     width: 950px;
+//     padding-right: 17px;
+//     text-align: left;
+//     padding: 5px;
+// }
 
 .inputFields {
     display: flex;
