--- a/src/shared/ui/Table/Table.module.scss
+++ b/src/shared/ui/Table/Table.module.scss
@@ -4,14 +4,22 @@
     border: 1px solid #4f5c78;
     border-collapse: collapse;  
     font-family: 'OpenSans';
-    min-width: 100vw;
-    width: 1260px;
+    //min-width: 100vw;
+    width: 1650px;
+    max-width: 10000px;
 }
 
-// .container {
-//     width: 100%;
-//     overflow: scroll;
-// }
+.table-wrapper {
+    margin-bottom: 25px;
+    border-radius: 6px;
+    background: #fff;
+    overflow: hidden; /* Clips any scrollbars that appear */
+}
+
+ .container {
+     width: 100%;
+     overflow: scroll;
+ }
 
 .head {  
     overflow: hidden;
@@ -23,3 +31,5 @@
     padding: 10px;
 
 }
+
+
