feat: sideBar (without profile modal)

--- a/src/app/styles/themes/_dark.scss
+++ b/src/app/styles/themes/_dark.scss
@@ -4,7 +4,12 @@
 
     --theme-button-color: var(--color-gray);
     --button-color: var(--color-purple-light);
+    --button-accent-hover-color: var(--color-dark);
 
     --Input-border-color: var(--color-purple-light);
+
+    --sidebar-bg-color: var(--color-dark);
+
+    --blocked-element-color: var(--color-gray);
 
 }
