--- a/src/app/styles/themes/_normal.scss
+++ b/src/app/styles/themes/_normal.scss
@@ -4,7 +4,11 @@
 
     --theme-button-color: var(--color-dark);
     --button-color: var(--color-gold-light);
+    --button-accent-hover-color: var(--color-gold-light);
 
     --Input-border-color: var(--color-dark);
 
+    --sidebar-bg-color: var(--color-purple-light);
+
+    --blocked-element-color: rgba(255, 255, 255, 0.5);
 }
