--- a/src/widgets/Page/ui/Page/Page.module.scss
+++ b/src/widgets/Page/ui/Page/Page.module.scss
@@ -1,4 +1,12 @@
-.Page {
+.page {
     min-height: 100vh;
+    display: flex;
+
 }
 
+.content {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
