fix: button.scss

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -104,6 +104,7 @@
         background-image: url(../../assets/icons/buttons/leave.svg);
         @include square(25px);
     }
+}
 
 .clearFilterButton {
     height: 34px;
