--- a/src/app/styles/variables/_variables.scss
+++ b/src/app/styles/variables/_variables.scss
@@ -14,6 +14,7 @@
     --color-green: #83C93C;
     --color-anti-flash-white: #f2f2f2;
     --color-purple-navy: #4f5c87;
+    --color-light-red: #ff647c;
 
     --border-radius: 5px;
 
