--- a/src/shared/ui/Table/Table.module.scss
+++ b/src/shared/ui/Table/Table.module.scss
@@ -5,7 +5,7 @@
     border-collapse: collapse;  
     font-family: 'OpenSans';
     //min-width: 100vw;
-    width: 1650px;
+    width: 100%;
     max-width: 10000px;
 }
 
