--- a/src/widgets/Page/ui/Page/Page.module.scss
+++ b/src/widgets/Page/ui/Page/Page.module.scss
@@ -1,12 +1,13 @@
 .page {
     min-height: 100vh;
     display: flex;
-
 }
 
 .content {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    //display: flex;
+    // justify-content: center;
+    // align-items: center;
+    flex-wrap: wrap;
+    margin-left: 10px;
 }
