--- a/src/widgets/SideNavBar/ui/SideNavBar.module.scss
+++ b/src/widgets/SideNavBar/ui/SideNavBar.module.scss
@@ -9,6 +9,7 @@
     background-color: var(--sidebar-bg-color);
     display: flex;
     flex-direction: column;
+    font-family: 'OpenSans', sans-serif;
     
     .header, 
     .buttons {
