--- a/src/shared/ui/Table/Table.module.scss
+++ b/src/shared/ui/Table/Table.module.scss
@@ -6,7 +6,7 @@
     font-family: 'OpenSans', sans-serif;
     //min-width: 100vw;
     width: 100%;
-    max-width: 10000px;
+    //max-width: 10000px;
 }
 
 .table-wrapper {
@@ -30,6 +30,7 @@
     padding-right: 17px;
     text-align: left;
     padding: 10px;
+    width: auto;
 
 }
 
