--- a/src/widgets/Page/ui/Page/Page.module.scss
+++ b/src/widgets/Page/ui/Page/Page.module.scss
@@ -3,6 +3,16 @@
     display: flex;
 }
 
+.historyBar {
+    display: block;
+    min-width: 100vmax;
+}
+
+.historyBar .hh {
+    border: 1px solid;
+    border-color: #867aeb;
+}
+
 .content {
     width: 100%;
     //display: flex;
