fix: fix buttons

--- a/src/app/styles/themes/_dark.scss
+++ b/src/app/styles/themes/_dark.scss
@@ -3,6 +3,10 @@
     --color-theme: var(--color-light);
 
     --theme-button-color: var(--color-gray);
+    --theme-crud-button-color-bg: var(--color-button-default-dark);
+    --color-text-theme: var(--color-light);
+    --color-hover-crud-button-bg: var(--color-button-crud-hover-bg-dark-theme);
+
     --button-color: var(--color-purple-light);
     --button-accent-hover-color: var(--color-dark);
 
