--- a/src/app/styles/themes/_normal.scss
+++ b/src/app/styles/themes/_normal.scss
@@ -3,6 +3,10 @@
     --color-theme: var(--color-dark);
 
     --theme-button-color: var(--color-dark);
+    --color-text-theme: var(--color-button-default-dark);
+    --color-hover-crud-button-bg: var(--color-button-crud-hover-bg-light-theme);
+
+    --theme-crud-button-color-bg: var(--color-button-default-light);
     --button-color: var(--color-gold-light);
     --button-accent-hover-color: var(--color-gold-light);
 
