--- a/src/app/styles/variables/_variables.scss
+++ b/src/app/styles/variables/_variables.scss
@@ -12,9 +12,15 @@
     --color-gold-light: #FFDD75;
     --color-gold-dark: #FABB00;
     --color-green: #83C93C;
-    --color-anti-flash-white: #f2f2f2;
-    --color-purple-navy: #4f5c87;
-    --color-light-red: #ff647c;
+
+    --color-button-default-light: #f2f2f2;
+    --color-button-default-dark: #6f8399;
+    --color-button-default-red: #ff647c;
+
+    --color-button-crud-hover-bg-light-theme: #cecece;
+    --color-button-crud-hover-bg-dark-theme: #8298b0;
+
+
 
     --border-radius: 5px;
 
