fix: fix buttons

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -183,7 +183,7 @@
 
 }
 
-.crud.deleteButton {
+.deleteButton {
     background-color: var(--color-button-default-red);
     color: var(--color-light);
     background-image: url(../../assets/icons/buttons/cross.svg);
