--- a/src/app/styles/themes/_normal.scss
+++ b/src/app/styles/themes/_normal.scss
@@ -15,4 +15,6 @@
     --sidebar-bg-color: var(--color-purple-light);
 
     --blocked-element-color: rgba(255, 255, 255, 0.5);
+
+    --active-nav-history-link-color: var(--color-purple-light);
 }
