--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -281,13 +281,13 @@
     background-image: url('../../assets/icons/navDropList/admin.svg')
 }
 
-.closeModal {
+
+
+.closeButton {
+    @include square(20px);
+
     position: relative;
-    width: 20px;
-    height: 20px;
-    align-self: flex-end;
     padding: 5px;
-    margin-top: -15px;
 
     &::before,
     &::after {
@@ -314,6 +314,26 @@
         @include hover {
             opacity: 0.7;
         }
+    }
+
+}
+
+.closeModal {
+    align-self: flex-end;
+    margin-top: -15px;
+}
+
+.closeButton-small {
+    @include square(10px);
+    padding: 8px;
+}
+
+.activeLinkHistoryButton {
+
+    &::after,
+    &::before
+    {
+        background-color: var(--active-nav-history-link-color);
     }
 
 }
