Made react split-pane

--- a/src/app/styles/variables/_variables.scss
+++ b/src/app/styles/variables/_variables.scss
@@ -8,6 +8,7 @@
     --color-light: #ffffff;
     --color-purple-light: #867AEB;
     --color-purple: #584CAE;
+    --color-primary: #867aeb;
     --color-purple-dark: #4D3DE1;
     --color-gold-light: #FFDD75;
     --color-gold-dark: #FABB00;
