--- a/src/pages/PetTypesPage/ui/PetTypesPage.module.scss
+++ b/src/pages/PetTypesPage/ui/PetTypesPage.module.scss
@@ -1,6 +1,8 @@
 
 .container {
     width: 100%;
+    display: flex;
+    gap: 10px;
 }
 
 .fieldsBlock {
@@ -10,6 +12,14 @@
     width: 100%;
     gap: 20px;
     margin-bottom: 10px;
+}
+
+.border {
+    border: 5px solid var(--color-primary);
+    border-radius: 10px;
+    //width: 100px;
+    // margin-left: 10px;
+    // margin-right: 10px;
 }
 
 .Field {
