--- a/src/pages/SpecialitiesPage/ui/SpecialitiesPage.module.scss
+++ b/src/pages/SpecialitiesPage/ui/SpecialitiesPage.module.scss
@@ -11,6 +11,11 @@
     margin-bottom: 10px;
 }
 
+.border {
+    border: 5px solid var(--color-primary);
+    border-radius: 10px;
+}
+
 .Field {
     display: flex;
     flex-direction: column;
