feat: mini-calendar

--- a/src/app/styles/themes/_normal.scss
+++ b/src/app/styles/themes/_normal.scss
@@ -17,4 +17,8 @@
     --blocked-element-color: rgba(255, 255, 255, 0.5);
 
     --active-nav-history-link-color: var(--color-purple-light);
+
+    --Purple-Dark-color: var(--color-dark);
+
+    --Calendar-color: var(--color-gold-light);
 }
