--- a/src/app/styles/themes/_dark.scss
+++ b/src/app/styles/themes/_dark.scss
@@ -18,4 +18,7 @@
 
     --active-nav-history-link-color: var(--color-purple);
 
+    --Purple-Dark-color: var(--color-purple);
+
+    --Calendar-color: var(--color-light);
 }
