Added sorting in table

--- a/src/app/styles/variables/_variables.scss
+++ b/src/app/styles/variables/_variables.scss
@@ -13,6 +13,7 @@
     --color-gold-light: #FFDD75;
     --color-gold-dark: #FABB00;
     --color-green: #83C93C;
+    --color-select-table: #dfdbfd;
 
     --color-button-default-light: #f2f2f2;
     --color-button-default-dark: #6f8399;
