--- a/src/shared/ui/Table/Table.module.scss
+++ b/src/shared/ui/Table/Table.module.scss
@@ -4,9 +4,8 @@
     border: 1px solid #4f5c78;
     border-collapse: collapse;  
     font-family: 'OpenSans', sans-serif;
-    //min-width: 100vw;
     width: 100%;
-    //max-width: 10000px;
+    position: sticky;
 }
 
 .table-wrapper {
