feat: Page Swapper

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -445,5 +445,10 @@
     {
         background-color: var(--active-nav-history-link-color);
     }
+}
 
+
+
+.currentColor {
+    color: currentColor;
 }
