--- a/src/widgets/HistoryNav/ui/HistoryNav.module.scss
+++ b/src/widgets/HistoryNav/ui/HistoryNav.module.scss
@@ -1,50 +1,59 @@
-@import '/src/app/styles/index.scss';
+@import "/src/app/styles/index.scss";
 
 .container {
-
+  width: 100%;
 }
 
 .navList {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    border-bottom: 1px solid var(--color-purple);
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  border-bottom: 1px solid var(--color-purple);
 }
 
 .listItem {
-    display: flex;
-    align-items: center;
-    padding-inline: 12px;
-    border-bottom: 2px solid transparent;
-    font-weight: 500;
-    font-size: 13px;
-    transition-duration: 0s;
+  display: flex;
+  align-items: center;
+  padding-inline: 12px;
+  border-bottom: 2px solid transparent;
+  font-weight: 500;
+  font-size: 13px;
+  transition-duration: 0s;
 
+  @include hover {
+    border-bottom: 2px solid var(--color-purple-light);
+    color: var(--active-nav-history-link-color);
 
-    @include hover {
-        border-bottom: 2px solid var(--color-purple-light);
-        color: var(--active-nav-history-link-color);
-
-        * {
-            &::after,
-            &::before {
-                background-color: var(--active-nav-history-link-color);;
-            }
-        }
+    * {
+      &::after,
+      &::before {
+        background-color: var(--active-nav-history-link-color);
+      }
     }
+  }
 }
 
-.itemLink{
-    height: 36px;
-    display: flex;
-    align-items: center;
+.listItemButton {
+  color: var(--color-text-theme);
+  
+  padding-inline: 6px;
+  &:not(:last-child) {
+    margin-right: 16px;
+  }
 
-    &:not(:last-child) {
-        margin-right: 10px;
-    }
+}
+
+.itemLink {
+  height: 36px;
+  display: flex;
+  align-items: center;
+
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 
 .activeLink {
-    color: var(--active-nav-history-link-color);
-    border-bottom: 2px solid var(--color-purple-light);
+  color: var(--active-nav-history-link-color);
+  border-bottom: 2px solid var(--color-purple-light);
 }
